# topoEEG

./: .env  LICENSE  README.md  setup.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  igraph-script.py  mne-script.py  tqdm-script.py
repo/src/: __init__.py  analysis.py  plotting.py  read_file.py  utils.py
repo/test/: test.py
repo/topoEEG.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
topoEEG/: README.md  __init__.py  analysis.py  plotting.py  pyproject.toml  read_file.py  setup.py  test.py  utils.py
topoEEG/Figures/: persistence_diagrams_distances.csv
topoEEG/src/: analysis.py  plotting.py  read_file.py  utils.py
topoEEG/tests/: test.py  topoEEG.code-workspace
topoEEG/topoEEG.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
topoEEG/topoeeg/: __init__.py
